Invoice-On-Account Grid text left & right alignment fixes

--- a/components/page-on-account/page-on-account.less
+++ b/components/page-on-account/page-on-account.less
@@ -10,6 +10,7 @@ rn-onaccount-balance-grid, rn-new-onaccount-grid{
   .grid-mixin();
     th, td {
       white-space: nowrap;
+      text-align: right;
     }
     th.checbox, td.checkbox {
       width: 30px;
